# patchwork

./: .dockerignore  .entrypoint.sh.swp  .gitmodules  CMakeLists.txt  Dockerfile  README.md  entrypoint.sh  makefile  makefile.in  visoption3d
.github/workflows/: .build-and-test.yml.swp  build-and-test.yml  rebuild-docker-image.yml
cmake/: FindBlendsurf.cmake  Findp4est.cmake  patchwork-config.cmake
include/: CMakeLists.txt  bezier.hpp  blended_evaluator.hpp  bspline_codegen.hpp  common.hpp  diff_geom.hpp  polynomial_evaluator.hpp  surface_evaluator.hpp
src/: CMakeLists.txt  analytic_evaluator.cpp  analytic_evaluator.hpp  bezier.cpp  blended_evaluator.cpp  bspline.cpp  bspline.hpp  bspline_codegen.cpp  bspline_precomp.cpp  bspline_precomp.hpp  diff_geom.cpp  face_map.cpp  face_map.hpp  face_map_obj.hpp  function.cpp  function.hpp  p4est_interface.cpp  p4est_interface.hpp  p4est_interface.tpp  polynomial_evaluator.cpp  sampling.cpp  sampling.hpp  vistt0_sampleout_face_map.cpp
tests/: CMakeLists.txt  debugout  makefile  test.opt  test_benchmark.cpp  test_bezier.cpp  test_function.cpp  test_geometry_error.cpp  test_patchwork.cpp  test_patchwork.hpp  test_refinement.cpp  test_regression.cpp  test_second_derivatives.cpp  test_spline_error_convergence.cpp  utils.cpp  utils.hpp
utils/: CMakeLists.txt  bspline_codegen.py  face_map_obj.cpp  face_map_viewer  face_map_viewer.cpp  face_map_viewer.d  find_patch_coefficients  find_patch_coefficients.cpp  find_patch_coefficients.d
utils/face_map_viewer.dSYM/Contents/: Info.plist
utils/face_map_viewer.dSYM/Contents/Resources/DWARF/: face_map_viewer
utils/find_patch_coefficients.dSYM/Contents/: Info.plist
utils/find_patch_coefficients.dSYM/Contents/Resources/DWARF/: find_patch_coefficients
